# EdgeNetSwitch

./: .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
config/: edgenetswitch.json
docs/: architecture.md  daemon-architecture.md  docker-development-environment.md  failure_injection.md  linux-devcontainer-migration-notes.md  messaging_bus.md  packet_lifecycle.md  qemu-setup.md  runtime_flow.md  switching-runtime.md  threading_model.md  v1.8.4-bounded-async-packet-processing.md  v1.8.8-failure-injection.md
docs/architecture/: daemon.md  overview.md
docs/design-notes/: v1.8.2-packet-telemetry.md
docs/development/: linux-devcontainer-migration-notes.md  v1.9.5-transport-backend.md
docs/devlog/: 01-qemu-installation.md
docs/investigations/: v1.9.3-epoll-runtime-investigation.md  v1.9.4-signal-runtime-investigation.md
docs/runtime/: failure-injection.md  flow.md  replay-determinism.md
docs/runtime-analysis/: v1.9.2-blocking-runtime-analysis.md
docs/system/: epoll-shutdown-wakeup-flow.md
include/edgenetswitch/: Config.hpp  HealthMonitor.hpp  Logger.hpp  MessagingBus.hpp  RuntimeMetrics.hpp  RuntimeStatus.hpp  Telemetry.hpp
include/edgenetswitch/control/: ControlContext.hpp  ControlProtocol.hpp  ControlServer.hpp  ControlWire.hpp
include/edgenetswitch/core/: Config.hpp  Logger.hpp  TimeUtils.hpp
include/edgenetswitch/failure/: FailureInjector.hpp
include/edgenetswitch/messaging/: MessagingBus.hpp
include/edgenetswitch/network/: IngressMode.hpp  UdpReceiver.hpp
include/edgenetswitch/packet/: LifecycleIdGenerator.hpp  Packet.hpp  PacketGenerator.hpp  PacketParser.hpp  PacketProcessor.hpp  PacketStats.hpp  PacketValidator.hpp
include/edgenetswitch/replay/: ReplayOutcome.hpp  ReplayOutcomeCollector.hpp  ReplayPlayer.hpp  ReplayRecord.hpp  ReplayRecorder.hpp
include/edgenetswitch/runtime/: HealthMonitor.hpp  RuntimeStatus.hpp  ShutdownReason.hpp  ShutdownRequest.hpp
include/edgenetswitch/switching/: ForwardingDecision.hpp  ForwardingEvent.hpp  InterfaceRegistry.hpp  MacAddress.hpp  MacTable.hpp  MacTableEntry.hpp  SwitchForwardingEngine.hpp  SwitchPort.hpp
include/edgenetswitch/system/: EpollEvent.hpp  EpollEventLoop.hpp  EpollManager.hpp  EventFd.hpp  FdRecord.hpp  FdRegistry.hpp  FileDescriptor.hpp  IEpollHandler.hpp
include/edgenetswitch/system/epoll/: ControlReadyHandler.hpp  EpollEventLoop.hpp  EpollManager.hpp  IEpollHandler.hpp  UdpReadyHandler.hpp
include/edgenetswitch/system/event_source/: EventFd.hpp
include/edgenetswitch/system/fd/: FdRecord.hpp  FdRegistry.hpp  FdState.hpp  FdType.hpp  FileDescriptor.hpp
include/edgenetswitch/system/wakeup/: ShutdownWakeupHandler.hpp
include/edgenetswitch/telemetry/: RateTypes.hpp  Telemetry.hpp  WindowedEwmaRateSmoother.hpp
include/edgenetswitch/transport/: PortBackend.hpp  TransmitResult.hpp  TransportManager.hpp  UdpPortBackend.hpp  VirtualPortBackend.hpp
src/control/: ControlContext.hpp  ControlDispatch.cpp  ControlDispatch.hpp  ControlServer.cpp  JsonResponse.hpp
src/core/: Config.cpp  Logger.cpp
src/daemon/: ControlContext.hpp  ControlDispatch.cpp  ControlDispatch.hpp  RuntimeStatusBuilder.cpp  RuntimeStatusBuilder.hpp  SnapshotPublisher.cpp  SnapshotPublisher.hpp  main.cpp
src/failure/: FailureInjector.cpp
src/health/: HealthMonitor.cpp
src/messaging/: MessagingBus.cpp
src/network/: UdpReceiver.cpp
src/packet/: PacketGenerator.cpp  PacketParser.cpp  PacketProcessor.cpp  PacketStats.cpp  PacketValidator.cpp
src/replay/: ReplayOutcomeCollector.cpp  ReplayPlayer.cpp  ReplayRecorder.cpp
src/runtime/: HealthMonitor.cpp  RuntimeStatusBuilder.cpp  RuntimeStatusBuilder.hpp  ShutdownReason.cpp  ShutdownRequest.cpp  SnapshotPublisher.hpp
src/switching/: InterfaceRegistry.cpp  MacAddress.cpp  MacTable.cpp  SwitchForwardingEngine.cpp  SwitchPort.cpp
src/system/: EpollEventLoop.cpp  EpollManager.cpp  EventFd.cpp  FdRegistry.cpp  FileDescriptor.cpp
src/system/epoll/: ControlReadyHandler.cpp  EpollEventLoop.cpp  EpollManager.cpp  UdpReadyHandler.cpp
src/system/event_source/: EventFd.cpp
src/system/fd/: FdRegistry.cpp  FileDescriptor.cpp
src/system/wakeup/: ShutdownWakeupHandler.cpp
src/telemetry/: FileTelemetryExporter.cpp  FileTelemetryExporter.hpp  InMemoryTelemetryExporter.cpp  InMemoryTelemetryExporter.hpp  StdoutTelemetryExporter.hpp  Telemetry.cpp  TelemetryExportManager.cpp  TelemetryExportManager.hpp  TelemetryExporter.hpp  WindowedEwmaRateSmoother.cpp
src/transport/: TransportManager.cpp  UdpPortBackend.cpp  VirtualPortBackend.cpp
src/utils/: Config.cpp  Logger.cpp
tests/: config_tests.cpp  control_tests.cpp  epoll_manager_tests.cpp  file_descriptor_tests.cpp  health_monitor_tests.cpp  health_monitor_transition_tests.cpp  interface_registry_tests.cpp  logger_tests.cpp  mac_table_tests.cpp  messagingbus_tests.cpp  packet_forwarding_runtime_tests.cpp  packet_parser_tests.cpp  packet_pipeline_tests.cpp  packet_stats_rate_tests.cpp  rate_smoother_tests.cpp  replay_equivalence_tests.cpp  replay_outcome_equivalence_tests.cpp  replay_player_tests.cpp  replay_recorder_tests.cpp  snapshot_publisher_tests.cpp  switch_forwarding_engine_tests.cpp  telemetry_export_manager_tests.cpp  telemetry_tests.cpp
